--- a/index.html
+++ b/index.html
@@ -286,10 +286,12 @@
         </div>
       </div>
     </div>
-    <button class="button" href="https://github.com/DionBalt?tab=repositories" target="_blank">
+    <a href="https://github.com/DionBalt?tab=repositories" target="_blank">
+    <button>
       View more on GitHub
      <i class="fa fa-github"></i>
    </button>
+   </a>
   </section>
 
   <!--/ Section Portfolio End /-->
