--- a/index.html
+++ b/index.html
@@ -301,44 +301,6 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="title-box-2">
-                    <h5 class="title-left">
-                      Send me a message
-                    </h5>
-                  </div>
-                  <div>
-                      <form action="" method="post" role="form" class="contactForm">
-                      <div id="sendmessage">Your message has been sent. Thank you!</div>
-                      <div id="errormessage"></div>
-                      <div class="row">
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                              <div class="validation"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
-                        </div>
-                      </div>
-                    </form>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -361,7 +323,7 @@
                       <li><a href="https://github.com/DionBalt?tab=repositories" target="_blank"><span class="ico-circle"><i class="fa fa-github"></i></span></a></li>
                       <li><a href="www.linkedin.com/in/dionysios-baltimas" target="_blank"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
                       <li><a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJlGTkbDmVThpjqFGsJQCRTktNxfzpdLrngZBbrrzxMmPvMNFsdJtjJQrxfWKfwvTGvTMnV" target="_blank"><span class="ico-circle"><i class="fa fa-telegram" aria-hidden="true"></i></span></a></li>
-                      <li><a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJlGTkbDmVThpjqFGsJQCRTktNxfzpdLrngZBbrrzxMmPvMNFsdJtjJQrxfWKfwvTGvTMnV" target="_blank"><span class="ico-circle"><i class="fa fa-user-circle" aria-hidden="true"></i></span></a></li>
+                      <li><a href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS" target="_blank"><span class="ico-circle"><i class="fa fa-user-circle" aria-hidden="true"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
