--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Theme Name: DevFolio
-    Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body id="page-top">
@@ -72,7 +65,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Hello, I am Dionysios Baltimas</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Web Developer,Frontend Developer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Computer Engineering,Web Developer,Frontend Developer,Angular</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -113,8 +106,7 @@
                   <p class="lead">
                     Through my CS studies, I have familiarized with a variety of programming 
                     languages and technologies with a particular focus on web applications(HTML,CSS,JavaScript,
-                    Typescript,Angular etc.). 4 years of prior experience
-                    on data labeling projects as search engine ads evaluator.
+                    Typescript,Angular etc.). 4 years of prior experienceon data labeling projects as search engine ads evaluator.
                   </p>
                 </div>
               </div>
@@ -291,7 +283,7 @@
   <!--/ Section Portfolio End /-->
 
   <!--/ Section Contact-Footer Star /-->
-  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay.webp)">
+  <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -338,15 +330,8 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+              <p class="copyright">&copy; Copyright <strong>My Website</strong>. All Rights Reserved</p>
               <div class="credits">
-                <!--
-                  All the links in the footer should remain intact.
-                  You can delete the links only if you purchased the pro version.
-                  Licensing information: https://bootstrapmade.com/license/
-                  Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-                -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
               </div>
             </div>
           </div>
