--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       <img src="" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
-                  <div class="col-sm-6 col-md-7">
+                  <div class="col-ms-6 col-ms-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Dionysios Baltimas</span></p>
                       <p><span class="title-s">Profile: </span> <span>Frontend Developer</span></p>
@@ -104,9 +104,9 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Through my CS studies, I have familiarized with a variety of programming 
-                    languages and technologies with a particular focus on web applications(HTML,CSS,JavaScript,
-                    Typescript,Angular etc.). 4 years of prior experienceon data labeling projects as search engine ads evaluator.
+                    Through my CS studies, I have familiarized with a variety of programming languages and technologies
+                    with a particular focus on web applications(HTML,CSS,JavaScript,Typescript,Angular etc.).
+                    Prior experience on data labeling projects as search engine ads evaluator.
                   </p>
                 </div>
               </div>
@@ -141,10 +141,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">My NotePad</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span>
-                    </div>
+                    <a href="https://github.com/DionBalt/NotePad" target="_blank">
+                      <h2 class="w-title">My NotePad</h2>
+                    </a>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -165,10 +164,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Tip Calculator</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span>
-                    </div>
+                    <a href="https://github.com/DionBalt/Tip-Calculator" target="_blank">
+                      <h2 class="w-title">Tip Calculator</h2>
+                    </a>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -189,10 +187,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Tic Tac Toe/h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span>
-                    </div>
+                    <a href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank">
+                      <h2 class="w-title">Tic Tac Toe</h2>
+                    </a>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -213,10 +210,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">ML Models</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span>
-                    </div>
+                    <a href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Classification.ipynb" target="_blank">
+                      <h2 class="w-title">ML Models</h2>
+                    </a>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -237,10 +233,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">ML Models</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span>
-                    </div>
+                    <a href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Generator.ipynb" target="_blank">
+                      <h2 class="w-title">ML Models</h2>
+                    </a>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -261,10 +256,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">-</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span>
-                    </div>
+                    <a href="https://github.com/DionBalt" target="_blank">
+                      <h2 class="w-title">---</h2>
+                    </a>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
