--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Through my CS studies, I have familiarized with a variety of programming languages and technologies
-                    with a particular focus on web applications(HTML,CSS,JavaScript,Typescript,Angular etc.).
-                    Prior experience on data labeling projects as search engine ads evaluator.
+                    Through my CS studies, I have familiarized with a variety of 
+                    programming languages and technologies with a particular focus
+                    on web applications(HTML,CSS,JavaScript
+                    ,Typescript,Angular etc.). Prior experience on data labeling 
+                    projects assearch engine ads evaluator.
                   </p>
                 </div>
               </div>
