--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                   <p class="lead">
                     Through my CS studies, I have familiarized with a variety of 
                     programming languages and technologies with a particular focus
-                    on web applications(HTML,CSS,JavaScript
-                    ,Typescript,Angular etc.). Prior experience on data labeling 
+                    on web applications(HTML,CSS,JavaScript,
+                    Typescript,Angular etc.). Prior experience on data labeling 
                     projects assearch engine ads evaluator.
                   </p>
                 </div>
