--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  
   <link href="img/favicon.webp" rel="icon">
   <link href="img/apple-touch-icon.webp" rel="apple-touch-icon">
 
@@ -66,7 +65,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Hello, I am Dionysios Baltimas</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Computer Engineering,Web Developer,Frontend Developer,Angular</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">WELCOME TO MY WEBSITE,Web Developer,Frontend Developer,Angular Developer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -137,7 +136,6 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-
             <a href="img/work-1.png" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="img/work-1.png" alt="" class="img-fluid">
@@ -146,7 +144,8 @@
                 <div class="row">
                   <div class="col-sm-8">
                     <a href="https://github.com/DionBalt/NotePad" target="_blank">
-                      <h2 class="w-title">My NotePad</h2>
+                      <h2 class="w-title">My NotePad
+                      </h2>
                     </a>
                   </div>
                   <div class="col-sm-4">
