--- a/index.html
+++ b/index.html
@@ -63,16 +63,15 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Hello, I am Dionysios Baltimas</h1>
           <p class="intro-subtitle"><span class="text-slider-items">WELCOME TO MY WEBSITE,Web Developer,Frontend Developer,Angular Developer</span><strong class="text-slider"></strong></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
     </div>
   </div>
   <!--/ Intro Skew End /-->
 
+  <!--/ About Section /-->
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
       <div class="row">
@@ -119,6 +118,7 @@
       </div>
     </div>
   </section>
+ <!--/End About Section /-->
 
   <!--/ Section Portfolio Star /-->
   <section id="work" class="portfolio-mf sect-pt4 route">
@@ -310,9 +310,9 @@
                   <div class="socials">
                     <ul>
                       <li><a href="https://github.com/DionBalt?tab=repositories" target="_blank"><span class="ico-circle"><i class="fa fa-github"></i></span></a></li>
-                      <li><a href="www.linkedin.com/in/dionysios-baltimas" target="_blank"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
-                      <li><a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJlGTkbDmVThpjqFGsJQCRTktNxfzpdLrngZBbrrzxMmPvMNFsdJtjJQrxfWKfwvTGvTMnV" target="_blank"><span class="ico-circle"><i class="fa fa-telegram" aria-hidden="true"></i></span></a></li>
-                      <li><a href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS" target="_blank"><span class="ico-circle"><i class="fa fa-user-circle" aria-hidden="true"></i></span></a></li>
+                      <li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
+                      <li><a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJlGTkbDmVThpjqFGsJQCRTktNxfzpdLrngZBbrrzxMmPvMNFsdJtjJQrxfWKfwvTGvTMnV" target="_blank"><span class="ico-circle"><i class="fa fa-mail-forward" aria-hidden="true"></i></span></a></li>
+                      <li><a href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS" target="_blank"><span class="ico-circle"><i class="fa fa-briefcase" aria-hidden="true"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
@@ -360,3 +360,4 @@
 
 </body>
 </html>
+
