--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     </ul>
                   </div>
                   <div class="socials">
-                    <h6>You can find me here</h6>
+                    <h6><strong>Learn more about me</strong></h6>
                     <ul>
                       <li><a href="https://github.com/DionBalt?tab=repositories" target="_blank"><span class="ico-circle"><i class="fa fa-github"></i></span></a></li>
                       <li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
