--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
                     Through my CS studies, I have familiarized with a variety of 
                     programming languages and technologies with a particular focus 
                     on web applications
-                    (HTML,CSS,JavaScript,Typescript,
-                    Angular etc.). Prior experience on data labeling projects as 
+                    (HTML, CSS, JavaScript, Typescript,
+                    Angular etc.).I take a collaborative, creative & strategic approach
+                    to solving problems. Prior experience on data labeling projects as 
                     search engine ads evaluator.
                   </p>
                 </div>
@@ -126,9 +127,9 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="title-box text-center">
-            <h3 class="title-a">
-              Portfolio
-            </h3>
+             <h3 class="title-a">
+               Portfolio
+             </h3>
             <div class="line-mf"></div>
           </div>
         </div>
@@ -143,10 +144,10 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <a href="https://github.com/DionBalt/NotePad" target="_blank">
-                      <h2 class="w-title">My NotePad
-                      </h2>
-                    </a>
+                    <h2 class="w-title">My NotePad</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Dec. 2022</span>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -167,9 +168,10 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <a href="https://github.com/DionBalt/Tip-Calculator" target="_blank">
-                      <h2 class="w-title">Tip Calculator</h2>
-                    </a>
+                      <h2 class="w-title">Tip Calculator App</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Nov. 2022</span>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -190,9 +192,10 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <a href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank">
                       <h2 class="w-title">Tic Tac Toe</h2>
-                    </a>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Dec. 2022</span>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -213,9 +216,10 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <a href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Classification.ipynb" target="_blank">
-                      <h2 class="w-title">ML Models</h2>
-                    </a>
+                      <h2 class="w-title">Image Classification in ML</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Dec. 2022</span>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -236,9 +240,10 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <a href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Generator.ipynb" target="_blank">
-                      <h2 class="w-title">ML Models</h2>
-                    </a>
+                      <h2 class="w-title">Image Generator in ML</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Dec. 2022</span>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -259,9 +264,10 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <a href="https://github.com/DionBalt" target="_blank">
-                      <h2 class="w-title">---</h2>
-                    </a>
+                      <h2 class="w-title"></h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date"></span>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -276,7 +282,6 @@
       </div>
     </div>
   </section>
-
   <!--/ Section Portfolio End /-->
 
   <!--/ Section Contact-Footer Star /-->
@@ -300,7 +305,7 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                     Let's Work together.    
+                      <strong>Interested in working together?</strong>     
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-telephone"></span>+30 698-631-9591</li>
@@ -308,7 +313,7 @@
                     </ul>
                   </div>
                   <div class="socials">
-                    <h6><strong>For more informartion:</strong></h6>
+                    <h6><strong>Find me on</strong></h6>
                     <ul>
                       <li><a href="https://github.com/DionBalt?tab=repositories" target="_blank"><span class="ico-circle"><i class="fa fa-github"></i></span></a></li>
                       <li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
@@ -361,4 +366,3 @@
 
 </body>
 </html>
-
