--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col-sm-12">
           <div class="title-box text-center">
              <h3 class="title-a">
-               Portfolio
+               My Repository
              </h3>
             <div class="line-mf"></div>
           </div>
