--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
               <div class="work-img">
                 <img src="img/work-1.png" alt="" class="img-fluid">
               </div>
+            </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
@@ -151,12 +152,13 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://github.com/DionBalt/NotePad" target="_blank">
+                        <span class="fa fa-github-square"></span>
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
-            </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -165,6 +167,7 @@
               <div class="work-img">
                 <img src="img/work-2.jpg" alt="" class="img-fluid">
               </div>
+            </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
@@ -175,12 +178,13 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://github.com/DionBalt/Tip-Calculator" target="_blank">
+                        <span class="fa fa-github-square"></span>
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
-            </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -189,6 +193,7 @@
               <div class="work-img">
                 <img src="img/work-3.jpg" alt="" class="img-fluid">
               </div>
+            </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
@@ -199,12 +204,13 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank">
+                        <span class="fa fa-github-square"></span>
+                      </a>  
                     </div>
                   </div>
                 </div>
               </div>
-            </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -213,6 +219,7 @@
               <div class="work-img">
                 <img src="img/work-4.jpg" alt="" class="img-fluid">
               </div>
+            </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
@@ -223,12 +230,13 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://github.com/DionBalt/2D-convolution-neural-network" target="_blank">
+                        <span class="fa fa-github-square"></span>
+                      </a>  
                     </div>
                   </div>
                 </div>
               </div>
-            </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -237,6 +245,7 @@
               <div class="work-img">
                 <img src="img/work-5.jpg" alt="" class="img-fluid">
               </div>
+            </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
@@ -247,12 +256,13 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://github.com/DionBalt/2D-convolution-neural-network" target="_blank">
+                        <span class="fa fa-github-square"></span>
+                      </a>  
                     </div>
                   </div>
                 </div>
               </div>
-            </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -261,6 +271,7 @@
               <div class="work-img">
                 <img src="img/work-6.jpg" alt="" class="img-fluid">
               </div>
+            </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
@@ -271,12 +282,13 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                      <a href="https://github.com/DionBalt" target="_blank">
+                        <span class="fa fa-github-square"></span>
+                      </a> 
                     </div>
                   </div>
                 </div>
               </div>
-            </a>
           </div>
         </div>
       </div>
