--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
       <a class="navbar-brand js-scroll" href="#page-top">Personal Portfolio</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
       </button>
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
@@ -107,7 +104,7 @@
                     programming languages and technologies with a particular focus 
                     on web applications
                     (HTML, CSS, JavaScript, Typescript,
-                    Angular etc.). I take a collaborative, creative & strategic approach
+                    Angular etc.).I take a collaborative, creative & strategic approach
                     to solving problems. Prior experience on data labeling projects as 
                     search engine ads evaluator.
                   </p>
@@ -321,7 +318,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-telephone"></span>+30 698-631-9591</li>
-                      <li><span class="ion-email"></span> baltimas.dion@gmail.com</li>
+                      <li><span class="ion-ios-telephone"></span>baltimas.dion@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
@@ -329,7 +326,6 @@
                     <ul>
                       <li><a href="https://github.com/DionBalt?tab=repositories" target="_blank"><span class="ico-circle"><i class="fa fa-github"></i></span></a></li>
                       <li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
-                      <li><a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJlGTkbDmVThpjqFGsJQCRTktNxfzpdLrngZBbrrzxMmPvMNFsdJtjJQrxfWKfwvTGvTMnV" target="_blank"><span class="ico-circle"><i class="fa fa-mail-forward" aria-hidden="true"></i></span></a></li>
                       <li><a href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS" target="_blank"><span class="ico-circle"><i class="fa fa-briefcase" aria-hidden="true"></i></span></a></li>
                     </ul>
                   </div>
@@ -340,6 +336,7 @@
         </div>
       </div>
     </div>
+    <!--Footer-->
     <footer>
       <div class="container">
         <div class="row">
