--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-telephone"></span>+30 698-631-9591</li>
-                      <li><span class="ion-ios-telephone"></span>baltimas.dion@gmail.com</li>
+                      <li><span class="ion-ios-email"></span>baltimas.dion@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
