--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <a class="navbar-brand js-scroll" href="#page-top">Personal Portfolio</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
       </button>
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
@@ -41,9 +44,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About</a>
-          </li>
+          </li>        
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Work</a>
+            <a class="nav-link js-scroll" href="#about">Repository</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
