--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
   </section>
  <!--/End About Section /-->
 
-  <!--/ Section Portfolio Star /-->
-  <section id="work" class="portfolio-mf sect-pt4 route">
+  <!--/ Section My Repo Star /-->
+  <section class="section projects is-medium is-white has-text-centered">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -130,171 +130,69 @@
              <h3 class="title-a">
                My Repository
              </h3>
+             <h2 class="subtitle-a">Here are a few past design projects I've worked on. Want to see more?</h2>
             <div class="line-mf"></div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-1.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-1.png" alt="" class="img-fluid">
-              </div>
-            </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">My NotePad</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Dec. 2022</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/DionBalt/NotePad" target="_blank">
-                        <span class="fa fa-github-square"></span>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+      <div class="project-grid">  
+        <div class="columns is-multiline is-mobile">
+          <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
+            <figure class="image is-3by2"><img class="project-thumb" src="img/work-1.png">
+              <figcaption>
+                <h1 class="title is-size-5 is-size-4-widescreen">My NotePad</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/NotePad" target="_blank"><span>Visit Website</span></a>
+              </figcaption>
+              <div class="overlay"></div>
+            </figure>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-2.jpg" alt="" class="img-fluid">
-              </div>
-            </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                      <h2 class="w-title">Tip Calculator App</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Nov. 2022</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/DionBalt/Tip-Calculator" target="_blank">
-                        <span class="fa fa-github-square"></span>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+          <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+            <figure class="image is-3by2"><img class="project-thumb" src="img/work-2.jpg">
+              <figcaption>
+                <h1 class="title is-size-5 is-size-4-widescreen">Tip Calculator</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tip-Calculator" target="_blank"><span>Visit Website</span></a>
+              </figcaption>
+              <div class="overlay"></div>
+            </figure>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-3.jpg" alt="" class="img-fluid">
-              </div>
-            </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                      <h2 class="w-title">Tic Tac Toe</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Dec. 2022</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank">
-                        <span class="fa fa-github-square"></span>
-                      </a>  
-                    </div>
-                  </div>
-                </div>
-              </div>
+          <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
+            <figure class="image is-3by2"><img class="project-thumb" src="img/work-3.jpg">
+              <figcaption>
+                <h1 class="title is-size-5 is-size-4-widescreen">Tic Tac Toe</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank"><span>Visit Website</span></a>
+              </figcaption>
+              <div class="overlay"></div>
+            </figure>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-4.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-4.jpg" alt="" class="img-fluid">
-              </div>
-            </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                      <h2 class="w-title">Image Classification in ML</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Dec. 2022</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/DionBalt/2D-convolution-neural-network" target="_blank">
-                        <span class="fa fa-github-square"></span>
-                      </a>  
-                    </div>
-                  </div>
-                </div>
-              </div>
+          <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
+            <figure class="image is-3by2"><img class="project-thumb" src="img/work-4.jpg">
+              <figcaption>
+                <h1 class="title is-size-5 is-size-4-widescreen">Image Classification In Machine Learning Models</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Classification.ipynb" target="_blank"><span>Visit Website</span></a>
+              </figcaption>
+              <div class="overlay"></div>
+            </figure>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-5.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-5.jpg" alt="" class="img-fluid">
-              </div>
-            </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                      <h2 class="w-title">Image Generator in ML</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Dec. 2022</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/DionBalt/2D-convolution-neural-network" target="_blank">
-                        <span class="fa fa-github-square"></span>
-                      </a>  
-                    </div>
-                  </div>
-                </div>
-              </div>
+          <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+            <figure class="image is-3by2"><img class="project-thumb" src="img/work-5.jpg">
+              <figcaption>
+                <h1 class="title is-size-5 is-size-4-widescreen">Image Generator In Machine Learning Models</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Generator.ipynb" target="_blank"><span>Visit Website</span></a>
+              </figcaption>
+              <div class="overlay"></div>
+            </figure>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
-              </div>
-            </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                      <h2 class="w-title"></h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date"></span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/DionBalt" target="_blank">
-                        <span class="fa fa-github-square"></span>
-                      </a> 
-                    </div>
-                  </div>
-                </div>
-              </div>
+          <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
+            <figure class="image is-3by2"><img class="project-thumb" src="img/work-6.png">
+              <figcaption>
+                <h1 class="title is-size-5 is-size-4-widescreen"></h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt" target="_blank"><span>Visit Website</span></a>
+              </figcaption>
+              <div class="overlay"></div>
+            </figure>
           </div>
         </div>
       </div>
+      <div class="columns is-centered">
+        <div class="column"><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="https://github.com/DionBalt" target="_blank"><span>See more on Github</span></a></div>
+      </div>
     </div>
   </section>
-  <!--/ Section Portfolio End /-->
+  <!--/ Section My Repo End /-->
 
   <!--/ Section Contact-Footer Star /-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
