--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.jpg" rel="icon">
-  <link href="img/apple-touch-icon.jpg" rel="apple-touch-icon">
+  <link href="img/apple-touch-icon.jfif" rel="icon">
+  <link href="img/favicon.jfif" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
