--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </section>
  <!--/End About Section /-->
 
-  <!--/ Section My Repo Star /-->
+ <!--/ Section My Repo Star /-->
   <section class="section projects is-medium is-white has-text-centered">
     <div class="container">
       <div class="row">
@@ -140,7 +140,7 @@
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
             <figure class="image is-3by2"><img class="project-thumb" src="img/work-1.png">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">My NotePad</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/NotePad" target="_blank"><span>Visit Website</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen">My NotePad</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/NotePad" target="_blank"><span>Visit GitHub</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
@@ -148,7 +148,7 @@
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
             <figure class="image is-3by2"><img class="project-thumb" src="img/work-2.jpg">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Tip Calculator</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tip-Calculator" target="_blank"><span>Visit Website</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen">Tip Calculator</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tip-Calculator" target="_blank"><span>Visit GitHub</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
@@ -156,7 +156,7 @@
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
             <figure class="image is-3by2"><img class="project-thumb" src="img/work-3.jpg">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Tic Tac Toe</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank"><span>Visit Website</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen">Tic Tac Toe</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank"><span>Visit GitHub</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
@@ -164,7 +164,7 @@
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
             <figure class="image is-3by2"><img class="project-thumb" src="img/work-4.jpg">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Image Classification In Machine Learning Models</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Classification.ipynb" target="_blank"><span>Visit Website</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen">Image Classification In Machine Learning Models</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Classification.ipynb" target="_blank"><span>Visit GitHub</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
@@ -172,7 +172,7 @@
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
             <figure class="image is-3by2"><img class="project-thumb" src="img/work-5.jpg">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Image Generator In Machine Learning Models</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Generator.ipynb" target="_blank"><span>Visit Website</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen">Image Generator In Machine Learning Models</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/2D-convolution-neural-network/blob/main/Image%20Generator.ipynb" target="_blank"><span>Visit GitHub</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
@@ -180,7 +180,7 @@
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
             <figure class="image is-3by2"><img class="project-thumb" src="img/work-6.png">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen"></h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt" target="_blank"><span>Visit Website</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen"></h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt" target="_blank"><span>Visit GitHub</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
@@ -192,7 +192,7 @@
       </div>
     </div>
   </section>
-  <!--/ Section My Repo End /-->
+  <!--/ Section My Repo End /--> 
 
   <!--/ Section Contact-Footer Star /-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
