--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
             <figure class="image is-3by2"><img class="project-thumb" src="img/work-6.png">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen"></h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt" target="_blank"><span>Visit GitHub</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen">Coffee Brew App</h1><a class="button is-primary is-outlined is-rounded" href="http://coffeeappbrew.epizy.com/?i=1" target="_blank"><span>Visit Website</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
