--- a/index.html
+++ b/index.html
@@ -103,13 +103,15 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Through my CS studies, I have familiarized with a variety of 
-                    programming languages and technologies with a particular focus 
-                    on web applications
-                    (HTML, CSS, JavaScript, Typescript,
-                    Angular etc.). I take a collaborative, creative & strategic approach
-                    to solving problems. Prior experience on data labeling projects as 
-                    search engine ads evaluator.
+                    In the course of my studies in Computer Science, I have 
+                    acquired a comprehensive understanding of a range of 
+                    programming languages and technologies, with a specific 
+                    emphasis on web applications (including HTML, 
+                    CSS, JavaScript, TypeScript, and Angular). 
+                    I approach problem-solving with a collaborative, 
+                    creative, and strategic mindset. Prior experience 
+                    experience as a search engine ads evaluator in
+                    data labeling projects.
                   </p>
                 </div>
               </div>
