--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h1 class="intro-title mb-4">Hello, I am Dionysios Baltimas</h1>
+          <h1 class="intro-title mb-4">I am Dionysios Baltimas</h1>
           <p class="intro-subtitle"><span class="text-slider-items">WELCOME TO MY WEBSITE,Web Developer,Frontend Developer,Angular Developer</span><strong class="text-slider"></strong></p>
         </div>
       </div>
@@ -123,7 +123,7 @@
   </section>
  <!--/End About Section /-->
 
- <!--/ Section My Repo Star /-->
+  <!--/ Section My Repo Star /-->
   <section class="section projects is-medium is-white has-text-centered">
     <div class="container">
       <div class="row">
@@ -156,9 +156,9 @@
             </figure>
           </div>
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
-            <figure class="image is-3by2"><img class="project-thumb" src="img/work-3.jpg">
+            <figure class="image is-3by2"><img class="project-thumb" src="img/work-3.png">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Tic Tac Toe</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank"><span>Visit GitHub</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen">Angular Calculator App</h1><a class="button is-primary is-outlined is-rounded" href="https://github.com/DionBalt/Tic-Tac-Toe" target="_blank"><span>Visit GitHub</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
@@ -182,7 +182,7 @@
           <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
             <figure class="image is-3by2"><img class="project-thumb" src="img/work-6.png">
               <figcaption>
-                <h1 class="title is-size-5 is-size-4-widescreen">Coffee Brew App</h1><a class="button is-primary is-outlined is-rounded" href="http://coffeeappbrew.epizy.com/?i=1" target="_blank"><span>Visit Website</span></a>
+                <h1 class="title is-size-5 is-size-4-widescreen">Coffee Brew App with Angular Bootstrap</h1><a class="button is-primary is-outlined is-rounded" href="http://coffeeappbrew.epizy.com/?i=1" target="_blank"><span>Visit Website</span></a>
               </figcaption>
               <div class="overlay"></div>
             </figure>
@@ -194,7 +194,7 @@
       </div>
     </div>
   </section>
-  <!--/ Section My Repo End /--> 
+  <!--/ Section My Repo End /-->
 
   <!--/ Section Contact-Footer Star /-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route">
@@ -229,7 +229,7 @@
                     <ul>
                       <li><a href="https://github.com/DionBalt?tab=repositories" target="_blank"><span class="ico-circle"><i class="fa fa-github"></i></span></a></li>
                       <li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><span class="ico-circle"><i class="fa fa-linkedin-square"></i></span></a></li>
-                      <li><a href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS" target="_blank"><span class="ico-circle"><i class="fa fa-briefcase" aria-hidden="true"></i></span></a></li>
+                      <li><a href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS" target="_blank"><span class="ico-circle"><i class="fa fa-user" aria-hidden="true"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
