--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                     CSS, JavaScript, TypeScript, and Angular). 
                     I approach problem-solving with a collaborative, 
                     creative, and strategic mindset. Prior experience 
-                    experience as a search engine ads evaluator in
-                    data labeling projects.
+                    as a search engine ads evaluator in data labeling 
+                    projects.
                   </p>
                 </div>
               </div>
