--- a/index.html
+++ b/index.html
@@ -103,15 +103,14 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    In the course of my studies in Computer Science, I have 
-                    acquired a comprehensive understanding of a range of 
-                    programming languages and technologies, with a specific 
-                    emphasis on web applications (including HTML, 
-                    CSS, JavaScript, TypeScript, and Angular). 
-                    I approach problem-solving with a collaborative, 
-                    creative, and strategic mindset. Prior experience 
-                    as a search engine ads evaluator in data labeling 
-                    projects.
+                    With the combination of my theoretical knowledge acquired 
+                    through my Computer science studies, practical experience 
+                    from various personal projects, and real-world involvement 
+                    in a project with specific outcomes, I have honed a results-driven
+                    attitude and a strong work ethic. Additionally, my effective 
+                    communication and problem-solving abilities, coupled with 
+                    hands-on experience with Angular Technology, 
+                    make me a suitable candidate for the job opportunity.
                   </p>
                 </div>
               </div>
