--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
                     in a project with specific outcomes, I have honed a results-driven
                     attitude and a strong work ethic. Additionally, my effective 
                     communication and problem-solving abilities, coupled with 
-                    hands-on experience with Angular Technology, 
-                    make me a suitable candidate for the job opportunity.
+                    hands-on experience with Angular Technology.
                   </p>
                 </div>
               </div>
