--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    With the combination of my theoretical knowledge acquired 
-                    through my Computer science studies, practical experience 
-                    from various personal projects, and real-world involvement 
-                    in a project with specific outcomes, I have honed a results-driven
-                    attitude and a strong work ethic. Additionally, my effective 
-                    communication and problem-solving abilities, coupled with 
+                    My in-depth understanding of computer programming, algorithms, 
+                    and data structures allows me to approach complex issues with a 
+                    systematic and analytical mindset, while my hands-on experience 
+                    has honed my ability to design, implement and debug software 
+                    applications effectively. I am always striving to expand my 
+                    knowledge and improve my technical abilities in order to stay 
+                    current with the latest industry advancements. Additionally, my 
+                    effective communication and problem-solving abilities, coupled with 
                     hands-on experience with Angular Technology.
                   </p>
                 </div>
