--- a/index.html
+++ b/index.html
@@ -109,10 +109,21 @@
                     has honed my ability to design, implement and debug software 
                     applications effectively. I am always striving to expand my 
                     knowledge and improve my technical abilities in order to stay 
-                    current with the latest industry advancements. Additionally, my 
+                    current with the latest industry advancements.
+                   </p>
+                   <p class="lead">
+                    Additionally, my 
                     effective communication and problem-solving abilities, coupled with 
-                    hands-on experience with Angular Technology.
-                  </p>
+                    hands-on experience with Angular Technology.Furthermore, I possess 
+                    excellent communication and problem-solving skills, which enable me 
+                    to work effectively with others to identify and resolve technical issues.
+                    My hands-on experience with Angular technology has allowed me to develop 
+                    a strong understanding of front-end development and the ability to create 
+                    user-friendly, responsive web applications that meet the needs of clients 
+                    and end-users. These skills, in combination with my technical expertise, 
+                    make me a valuable asset to any team seeking to develop high-quality 
+                    software solutions.
+                   </p>
                 </div>
               </div>
             </div>
