--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                     make me a valuable asset to any team seeking to develop high-quality 
                     software solutions.
                    </p>
+                   <p class="lead">
+                    These skills, in combination with my technical expertise, make me a 
+                    valuable asset to any team seeking to develop high-quality software 
+                    solutions.
+                   </p>
                 </div>
               </div>
             </div>
