--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
                     My hands-on experience with Angular technology has allowed me to develop 
                     a strong understanding of front-end development and the ability to create 
                     user-friendly, responsive web applications that meet the needs of clients 
-                    and end-users. These skills, in combination with my technical expertise, 
-                    make me a valuable asset to any team seeking to develop high-quality 
-                    software solutions.
+                    and end-users.
                    </p>
                    <p class="lead">
                     These skills, in combination with my technical expertise, make me a 
