--- a/index.html
+++ b/index.html
@@ -112,10 +112,9 @@
                     current with the latest industry advancements.
                    </p>
                    <p class="lead">
-                    Additionally, my 
-                    effective communication and problem-solving abilities, coupled with 
-                    hands-on experience with Angular Technology.Furthermore, I possess 
-                    excellent communication and problem-solving skills, which enable me 
+                    Additionally, my effective communication and problem-solving abilities, 
+                    coupled with hands-on experience with Angular Technology.Furthermore, 
+                    I possess excellent communication and problem-solving skills, which enable me 
                     to work effectively with others to identify and resolve technical issues.
                     My hands-on experience with Angular technology has allowed me to develop 
                     a strong understanding of front-end development and the ability to create 
