--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
                     work effectively with others to identify and resolve technical issues. 
                     My hands-on experience with Angular technology has allowed me to develop 
                     a strong understanding of front-end development and the ability to create 
-                    user-friendly, responsive web applications that meet the needs of clients 
-                    and end-users.
+                    user-friendly, responsive web applications that meet the needs of clients.
                    </p>
                    <p class="lead">
                     These skills, in combination with my technical expertise, make me a 
