--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
       </div>
       <div class="columns is-centered">
-        <div class="column"><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="https://github.com/DionBalt" target="_blank"><span>See more on Github</span></a></div>
+        <div class="column"><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="https://github.com/DionBalt?tab=repositories" target="_blank"><span>See more on Github</span></a></div>
       </div>
     </div>
   </section>
