--- a/index.html
+++ b/index.html
@@ -103,20 +103,20 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    My in-depth understanding of computer programming, algorithms, 
-                    and data structures allows me to approach complex issues with a 
-                    systematic and analytical mindset, while my hands-on experience 
-                    has honed my ability to design, implement and debug software 
-                    applications effectively. I am always striving to expand my 
-                    knowledge and improve my technical abilities in order to stay 
-                    current with the latest industry advancements.
+                    My expertise in Angular and related technologies, such as HTML, 
+                    CSS, and JavaScript, has enabled me to develop and implement 
+                    engaging user interfaces for various projects. I have hands-on 
+                    experience working with Angular frameworks to create responsive, 
+                    fast-loading, and highly interactive web applications. I am also 
+                    well-versed in Angular's core concepts, including modularity, 
+                    dependency injection, and directives.
                    </p>
                    <p class="lead">
                     Additionally, my effective communication and problem-solving abilities, 
                     coupled with hands-on experience with Angular Technology. I possess 
                     excellent communication and problem-solving skills, which enable me to 
                     work effectively with others to identify and resolve technical issues. 
-                    My hands-on experience with Angular technology has allowed me to develop 
+                    My experience with Angular technology has allowed me to develop 
                     a strong understanding of front-end development and the ability to create 
                     user-friendly, responsive web applications that meet the needs of clients.
                    </p>
