--- a/index.html
+++ b/index.html
@@ -113,17 +113,9 @@
                    </p>
                    <p class="lead">
                     Additionally, my effective communication and problem-solving abilities, 
-                    coupled with hands-on experience with Angular Technology. I possess 
-                    excellent communication and problem-solving skills, which enable me to 
-                    work effectively with others to identify and resolve technical issues. 
-                    My experience with Angular technology has allowed me to develop 
-                    a strong understanding of front-end development and the ability to create 
-                    user-friendly, responsive web applications that meet the needs of clients.
-                   </p>
-                   <p class="lead">
-                    These skills, in combination with my technical expertise, make me a 
-                    valuable asset to any team seeking to develop high-quality software 
-                    solutions.
+                    coupled with hands-on experience with Angular Technology and problem-solving 
+                    skills, which enable me to work effectively with others to identify 
+                    and resolve technical issues.
                    </p>
                 </div>
               </div>
