--- a/index.html
+++ b/index.html
@@ -103,19 +103,21 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    My expertise in Angular and related technologies, such as HTML, 
-                    CSS, and JavaScript, has enabled me to develop and implement 
-                    engaging user interfaces for various projects. I have hands-on 
-                    experience working with Angular frameworks to create responsive, 
-                    fast-loading, and highly interactive web applications. I am also 
-                    well-versed in Angular's core concepts, including modularity, 
-                    dependency injection, and directives.
+                   I am proficient in Angular and associated technologies, including 
+                   HTML, CSS, and JavaScript. My extensive knowledge in these areas 
+                   has allowed me to design and implement user-friendly interfaces 
+                   for various projects. My hands-on experience with Angular frameworks 
+                   has enabled me to create responsive, efficient, and highly interactive 
+                   web applications that meet client requirements. I have a thorough 
+                   understanding of Angular's core principles, such as modularity, 
+                   dependency injection, and directives.
                    </p>
                    <p class="lead">
-                    Additionally, my effective communication and problem-solving abilities, 
-                    coupled with hands-on experience with Angular Technology and problem-solving 
-                    skills, which enable me to work effectively with others to identify 
-                    and resolve technical issues.
+                   Furthermore, my strong communication skills and problem-solving abilities, 
+                   long with my expertise in Angular technology, enable me to collaborate 
+                   effectively with others to identify and resolve technical challenges. I am 
+                   confident in my ability to deliver high-quality results and strive to continuously 
+                   improve my skills and knowledge in this field.
                    </p>
                 </div>
               </div>
